app nao fecha mais quando passado um rfid com ele aberto